<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="artist">Artist</string>
    <string name="chat1">Access our chat</string>
    <string name="chat2">Now Live</string>
    <string name="themes">Themes</string>
    <string name="share">Share</string>
    <string name="cast">Cast to TV</string>
    <string name="schedule">Schedule</string>
    <string name="contact">Contact</string>
    <string name="bluetooth" translatable="false">Bluetooth</string>
    <string name="static_mode">Static Mode</string>
    <string name="about">About US</string>
    <string name="review">Review</string>
    <string name="terms">Terms</string>
    <string name="string_copy">Text copied to clipboard.</string>
    <string name="music_live">Live Music</string>
    <string name="string_name">Name</string>
    <string name="string_name3">Your name...</string>
    <string name="string_email">Email</string>
    <string name="string_email2">Your email...</string>
    <string name="string_phone">Telephone</string>
    <string name="string_subject2">Message subject</string>
    <string name="string_message">Message</string>
    <string name="string_message2">Your message...</string>
    <string name="nav_save">Save contact information</string>
    <string name="string_send">Send</string>
    <string name="string_playing">Now Playing</string>
    <string name="string_play">Player</string>
    <string name="string_paused">Paused</string>
    <string name="string_loading">Loading...</string>
    <string name="string_close">Close</string>
    <string name="string_help">Help</string>
    <string name="string_open">Open</string>
    <string name="string_access">Access</string>
    <string name="string_content">No content!</string>
    <string name="string_avaliable">Not Available!</string>
    <string name="string_after">After</string>
    <string name="string_updatenow">Update</string>
    <string name="string_attempts">Exhausted attempts!</string>
    <string name="string_next_attempt">Next attempt on:</string>
    <string name="string_seconds"> second(s).</string>
    <string name="string_connect">Connect</string>
    <string name="string_disconnect">Disconnect</string>
    <string name="string_sending">Sending&#8230;</string>
    <string name="string_retry">Try again</string>
    <string name="load">Loading…</string>
    <string name="bible_all">All</string>
    <string name="bible_old">Old Testament</string>
    <string name="bible_new">New Testament</string>
    <string name="alert_storage">There was an error opening the app, make sure there is enough storage space to load the app!</string>
    <string name="testing">Testing...</string>
    <string name="loading_lyrics">Loading lyrics...</string>
    <string name="lyrics_loaded_click_to_sync">Lyrics loaded! Click to sync</string>
    <string name="total_lines">Total: %d lines</string>
    <string name="error_format">Error: %s</string>
    <string name="string_programming">Programming:</string>
    <string name="string_anjo">Angel of the day</string>
    <string name="string_horo">Horoscope</string>
    <string name="string_num">Numerology</string>
    <string name="string_sonho">Meaning of Dreams</string>
    <string name="string_volume_up">Volume Up</string>
    <string name="string_volume_down">Volume Down</string>
    <string name="cast_tutorial_title">Touch to cast media to your TV</string>
    <string name="string_country">State</string>
    <string name="string_address">Address</string>
    <string name="string_city">City</string>
    <string name="string_birthdate">Birthdate</string>
    <string name="string_district">District</string>
    <string name="string_remove_data">Remove saved data</string>
    <string name="string_accept_data">Tap to read and accept terms</string>
    <string name="string_loc">Voiceover:</string>
    <string name="live">live</string>
    <string name="string_live">We are live</string>
    <string name="string_content2">Wait for\nmore promotions</string>
    <string name="string_content3">More promotions soon!</string>
    <string name="string_next">Next</string>
    <string name="string_previous">Previous</string>
    <string name="string_rate2">We appreciate the review!</string>
    <string name="string_change">Change location</string>
    <string name="string_change2">Change</string>
    <string name="string_like">Like</string>
    <string name="string_dislike">Dislike</string>
    <string name="search">Search</string>
    <string name="string_start">Start:</string>
    <string name="string_end">End:</string>
    <string name="string_music">Song name</string>
    <string name="string_artist">Artist name</string>
    <string name="string_anonymous">Anonymous</string>
    <string name="string_anonymous2">Log in…</string>
    <string name="string_cast">Chromecast</string>
    <string name="nav_announcers">Announcers</string>
    <string name="nav_advertising">Advertising</string>
    <string name="nav_location">Location</string>
    <string name="nav_help">Help</string>
    <string name="string_version">Version: 2.0</string>
    <string name="string_developed_by">Developed by APPRADIO.PRO</string>
    <string name="string_cloud">Condition: %s</string>
    <string name="string_termal">%d °C</string>
    <string name="string_atm">%d mBar</string>
    <string name="string_wind">%d Km/h</string>
    <string name="string_humidity">%s - air humidity</string>
    <string name="string_rain2">Chuva</string>
    <string name="string_humidity2">Umidity</string>
    <string name="string_wind2">Wind</string>
    <string name="inicio">Start:</string>
    <string name="fim">End:</string>
    <string name="locutor">Announcer:</string>
    <string name="toast_music_like">You already voted for this song!</string>
    <string name="toast_music_like2">Start the player or wait for loading!</string>
    <string name="desligar">Hang After:</string>
    <string name="iniciar">Start</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string-array name="timer">
        <item>Disconnect After</item>
        <item>10 Minutes</item>
        <item>20 Minutes</item>
        <item>30 Minutes</item>
        <item>1 Hour</item>
        <item>2 Hours</item>
    </string-array>
    <string name="sleep">Choose a time option!</string>
    <string name="sleep2">To activate the snooze function, start the player!</string>
    <string name="nav_week">Days of the week</string>
    <string name="nav_scheduler">Scheduler</string>
    <string name="nav_scheduler2">Scheduler</string>
    <string name="nav_magazine">Magazine</string>
    <string name="nav_promotion2">Promotion:</string>
    <string name="string_more">More</string>
    <string name="nav_sleep">Sleep Mode</string>
    <string name="nav_weather">Weather Forecast</string>
    <string name="nav_title_social">Social</string>
    <string name="nav_title_more">More Information</string>
    <string name="nav_menu">MENU</string>
    <string name="nav_contact">CONTACT US</string>
    <string name="nav_events">Events</string>
    <string name="nav_share">Share app</string>
    <string name="nav_about2">About</string>
    <string name="nav_about">About us</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_static">Static mode</string>
    <string name="nav_music">ASK FOR MUSIC</string>
    <string name="nav_interesting">INTERESTING FACTS</string>
    <string name="nav_rate">Rate us</string>
    <string name="nav_term">Terms &amp; Policies</string>
    <string name="nav_promotion">Promotions</string>
    <string name="nav_notification">Notifications</string>
    <string name="nav_donation">Donation</string>
    <string name="nav_news">News</string>
    <string name="nav_accessibility">Accessibility</string>
    <string name="nav_prayer">Prayer request</string>
    <string name="nav_weather2">Select a City</string>
    <string name="now2">Now</string>
    <string name="days1">MON</string>
    <string name="days2">TUE</string>
    <string name="days3">WED</string>
    <string name="days4">THUR</string>
    <string name="days5">FRI</string>
    <string name="days6">SAT</string>
    <string name="days7">SUN</string>
    <string name="string_dispair">Dispair</string>
    <string name="string_Pair">Pair</string>
    <string name="alert_location">Access to location</string>
    <string name="alert_location_msg">We need access to the location to load the weather data for your region, do you want to enable it?</string>
    <string name="string_support2">Bluetooth not supported</string>
    <string name="string_try2">Trying to connect:</string>
    <string name="toast_enable_location">Please enable Location to continue</string>
    <string name="frag_one2">In progress</string>
    <string name="frag_one">Progress</string>
    <string name="frag_two">Closed</string>
    <string name="frag_three">Awarded</string>
    <string name="frag_insc">Subscription:</string>
    <string name="frag_insc2">to</string>
    <string name="participe">Participate</string>
    <string name="string_empty">Not provided</string>
    <string name="alert_ops">Oops, Sorry 😥</string>
    <string name="alert_internet">Internet unavailable!</string>
    <string name="alert_internet_desc">Internet unavailable!</string>
    <string name="alert_internet_message">Please check your internet connection.</string>
    <string name="alert_update">A new update is available for download!</string>
    <string name="alert_action">Unable to complete action!</string>
    <string name="alert_send">Message sent successfully, thanks for contacting!</string>
    <string name="alert_download">We’ll direct you to the app store.</string>
    <string name="alert_audio">It was not possible to load the streaming audio.\n\nPlease check your internet connection, if the problem persists please contact us.</string>
    <string name="alert_video">Please check your connection to the internet if the problem persists we may be under maintenance.\n\nIn case of doubt contact us.</string>
    <string name="toast_inputs">Fill in the field correctly!</string>
    <string name="toast_inputs2">The field must contain at least %d characters!</string>
    <string name="toast_inputs3">The passwords don\'t match!</string>
    <string name="toast_permissions">Enable permissions!</string>
    <string name="toast_permissions2">To use this feature, you must enable camera and storage permissions.</string>
    <string name="toast_version">Available in the next version!</string>
    <string name="toast_static">Static mode activated!</string>
    <string name="toast_static_stop">Static mode deactivated!</string>
    <string name="about_description_agency">Virtues Application Agency</string>
    <string name="url_radio_litoral" translatable="false">www.litoralfm.com.br</string>
    <string name="string_menu_programacao">SCHEDULE</string>
    <string name="string_menu_noticias">NEWS</string>
    <string name="string_menu_agenda_litoral">LITORAL AGENDA</string>
    <string name="string_menu_promocoes">PROMOTIONS</string>
    <string name="string_menu_pedido_musical">SONG REQUEST</string>
    <string name="string_menu_quem_somos">ABOUT US</string>
    <string name="string_menu_contato">COMMERCIAL CONTACT</string>
    <string name="string_menu_configuracoes">SETTINGS</string>
</resources>